integrer les couleurs et polices

--- a/src/_includes/nav.njk
+++ b/src/_includes/nav.njk
@@ -1,4 +1,13 @@
 <nav>
     <a href="/">Accueil</a>
     <a href="/services">Services</a>
+    <div id="chakra-bar">
+        <button onclick="changeTheme('root')">Racine</button>
+        <button onclick="changeTheme('sacral')">Sacré</button>
+        <button onclick="changeTheme('solar-plexus')">Plexus Solaire</button>
+        <button onclick="changeTheme('heart')">Cœur</button>
+        <button onclick="changeTheme('throat')">Gorge</button>
+        <button onclick="changeTheme('third-eye')">Troisième Œil</button>
+        <button onclick="changeTheme('crown')">Couronne</button>
+      </div>      
 </nav>
