mise en page accueil

--- a/src/_includes/nav.njk
+++ b/src/_includes/nav.njk
@@ -1,6 +1,9 @@
-<nav>
-    <a href="/">Accueil</a>
-    <a href="/services">Services</a>
+<nav >
+    <img src="/" alt="Logo" id="logo">
+    <h1>LA SIRÈNE</h1>
+    <a href="/">ACCUEIL</a>
+    <a href="/">À PROPOS</a>
+    <a href="/services">SERVICES</a>
     <div id="chakra-bar">
         <button onclick="changeTheme('root')">Racine</button>
         <button onclick="changeTheme('sacral')">Sacré</button>
