--- a/src/index.njk
+++ b/src/index.njk
@@ -1,8 +1,26 @@
 ---
-layout: base.njk 
+layout: base.njk
 title: Accueil
 ---
 
+<!-- Introduction -->
+<section id="introduction">
+    <h1>Bienvenue chez LA SIRÈNE</h1>
+    <p>Bienvenue chez "La Sirène", votre sanctuaire pour l'exploration et la guérison spirituelles. Nous croyons en la puissance de la connexion entre le corps, l'esprit et l'âme, et nous sommes dédiés à vous guider dans ce voyage sacré.Chez "La Sirène", nous offrons une gamme de services thérapeutiques conçus pour nourrir votre être intérieur et vous aider à naviguer dans les complexités de la vie moderne. Nos lectures de tarot personnalisées vous révèlent des perspectives profondes et des vérités cachées. Nos séances de méditation guidée vous invitent à la tranquillité d'esprit et à la conscience de soi. Nos traitements de reiki harmonisent votre énergie, favorisant la relaxation et la guérison.Chaque service est conçu avec soin et intention, reflétant notre engagement envers l'authenticité, la crédibilité et l'accompagnement vers la guérison. Nos praticiens expérimentés sont là pour vous soutenir, vous inspirer et vous aider à débloquer votre potentiel spirituel.
+    Plongez dans le monde mystique de "La Sirène" et découvrez un chemin vers le bien-être, la sagesse et l'épanouissement. Votre voyage commence ici. Explorez nos services et prenez rendez-vous aujourd'hui. Nous sommes impatients de vous accompagner dans cette aventure transformative.</p>
+</section>
 
 
-<h1>Accueil</h1>
+<!-- Services -->
+<section id="services">
+    <h2>Nos Services</h2>
+    {% for service in services %}
+    <div class="service">
+        <a href="/services#{{ service.id }}">
+            <img src="{{ service.image }}" alt="{{ service.name }}">
+            <h3>{{ service.name }}</h3>
+        </a>
+        <p>{{ service.description }}</p>
+    </div>
+    {% endfor %}
+</section>
