--- a/src/_includes/nav.njk
+++ b/src/_includes/nav.njk
@@ -1,5 +1,7 @@
 <nav >
-    <img src="/" alt="Logo" id="logo">
+    <div id="logo">
+        {% include "logo.njk" %}
+    </div>
     <h1>LA SIRÈNE</h1>
     <a href="/">ACCUEIL</a>
     <a href="/">À PROPOS</a>
