--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -1,11 +1,12 @@
 <footer>
-    <div>
+  <div class="footer-grid">
+    <div class="links">
             <a href="/">Accueil</a>
             <a href="/">À propos</a>
             <a href="/services">Services</a>
             <a href="/">Contact</a>
     </div>
-    <div>
+    <div class="icons">
         <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48" fill="none">
             <path d="M48 24C48 10.7452 37.2548 0 24 0C10.7452 0 0 10.7452 0 24C0 35.9789 8.77641 45.908 20.25 47.7084V30.9375H14.1562V24H20.25V18.7125C20.25 12.6975 23.8331 9.375 29.3152 9.375C31.9402 9.375 34.6875 9.84375 34.6875 9.84375V15.75H31.6613C28.68 15.75 27.75 17.6002 27.75 19.5V24H34.4062L33.3422 30.9375H27.75V47.7084C39.2236 45.908 48 35.9789 48 24Z" fill="white"/>
           </svg>
@@ -25,6 +26,6 @@
             <path d="M29.2 48C22 48 16.6 44.3 16.6 35.4V21.2H10V13.5C17.2 11.6 20.2 5.4 20.6 0H28.1V12.2H36.8V21.2H28.1V33.6C28.1 37.3 30 38.6 33 38.6H37.2V48H29.2Z" fill="white"/>
           </svg>
     </div>
-                
+  </div>              
 
 </footer>
