--- a/src/_includes/nav.njk
+++ b/src/_includes/nav.njk
@@ -4,7 +4,7 @@
     </div>
     <h1>LA SIRÈNE</h1>
     <a href="/">ACCUEIL</a>
-    <a href="/">À PROPOS</a>
+    <a href="#">À PROPOS</a>
     <a href="/services">SERVICES</a>
     <div id="chakra-bar">
         <button onclick="changeTheme('root')">Racine</button>
