--- a/src/index.njk
+++ b/src/index.njk
@@ -14,13 +14,16 @@ title: Accueil
 <!-- Services -->
 <section id="services">
     <h2>Nos Services</h2>
-    {% for service in services %}
-    <div class="service">
-        <a href="/services#{{ service.id }}">
-            <img src="{{ service.image }}" alt="{{ service.name }}">
-            <h3>{{ service.name }}</h3>
-        </a>
-        <p>{{ service.description }}</p>
+    <div class="services-grid">
+        {% for service in services %}
+        <div class="service">
+            <a href="/services#{{ service.id }}">
+                <div class="service-image" style="background-image: url('{{ service.image }}');">
+                    <h3>{{ service.name }}</h3>
+                </div>
+            </a>
+            <p>{{ service.description }}</p>
+        </div>
+        {% endfor %}
     </div>
-    {% endfor %}
 </section>
