--- a/src/index.njk
+++ b/src/index.njk
@@ -3,6 +3,7 @@ layout: base.njk
 title: Accueil
 ---
 
+
 <!-- Introduction -->
 <section id="introduction">
     <h1>Bienvenue chez LA SIRÈNE</h1>
@@ -11,6 +12,8 @@ title: Accueil
 </section>
 
 
+
+</section>
 <!-- Services -->
 <section id="services">
     <h2>Nos Services</h2>
@@ -22,8 +25,38 @@ title: Accueil
                     <h3>{{ service.name }}</h3>
                 </div>
             </a>
-            <p>{{ service.description }}</p>
         </div>
         {% endfor %}
     </div>
 </section>
+
+
+<!-- Témoignages -->
+<section id="testimonials">
+    <h2>Témoignages de nos clients</h2>
+    <div class="testimonial">
+        <blockquote>
+            "Je suis tellement reconnaissant pour les services de La Sirène. Les séances de reiki ont transformé ma vie et m'ont aidé à trouver un équilibre émotionnel. Je recommande fortement !"
+        </blockquote>
+        <cite>- Aitana M.</cite>
+    </div>
+    <div class="testimonial">
+        <blockquote>
+            "La Sirène a été une bénédiction dans ma vie. Les lectures de tarot ont ouvert des portes de compréhension et de croissance personnelle que je n'aurais jamais imaginées. C'est une expérience révélatrice !"
+        </blockquote>
+        <cite>- Alexandre G.</cite>
+    </div>
+    <div class="testimonial">
+        <blockquote>
+            "Les méditations guidées de La Sirène sont comme un baume pour l'âme. Elles m'ont aidé à traverser des périodes difficiles et à retrouver la paix intérieure. Un vrai cadeau !"
+        </blockquote>
+        <cite>- Mateo F.</cite>
+    </div>
+    <div class="testimonial">
+        <blockquote>
+            "Je ne peux pas assez remercier La Sirène pour l'impact positif qu'ils ont eu sur ma vie. Leur approche holistique m'a aidé à me reconnecter avec moi-même et à vivre une vie plus équilibrée."
+        </blockquote>
+        <cite>- Bilel M.</cite>
+    </div>
+    
+    <!-- Vous pouvez ajouter plus de témoignages ici -->
