--- a/assets/css/page-accueil.css
+++ b/assets/css/page-accueil.css
@@ -1,3 +1,31 @@
+/* Témoignages */
+#testimonials {
+    margin: 70px 130px 70px 130px;
+    background-color: rgba(255, 239, 239, 0.457); 
+    padding: 40px;
+    border-radius: 5px; 
+    text-align: center;
+}
+
+.testimonial {
+    margin-bottom: 2rem;
+}
+
+blockquote {
+    font-style: italic;
+    margin: 0 0 1rem 0;
+    text-align: left;
+}
+
+cite {
+    font-size: smaller;
+    display: block;
+    text-align: right;
+}
+
+
+
+
 /* Services Grid */
 #services {
     display: flex;
@@ -22,15 +50,21 @@
     background-size: cover;  /* Ajuste l'image pour couvrir la zone de contenu */
     background-position: center;  /* Centre l'image */
     height: 200px;  /* Hauteur fixe */
+    min-height: 200px;  /* Hauteur minimale */
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
+
 .service h3 {
     color: white;
     background-color: rgba(0, 0, 0, 0.5);
     padding: 0.5rem;
+}
+
+.service h3:hover {
+    background-color: var(--chakra-selected); /* Utilisation de la variable CSS pour la couleur du chakra sélectionné */
 }
 
 /* Responsive */
@@ -45,7 +79,7 @@ a {
 }
 /* Introduction */
 #introduction {
-    margin: 70px 130px 0 10px;
+    margin: 70px 130px 0 130px;
     background-color: rgba(255, 239, 239, 0.457); 
     padding: 40px;
     border-radius: 5px; 
