--- a/assets/css/page-services.css
+++ b/assets/css/page-services.css
@@ -1,6 +1,3 @@
-/* Services Page */
-
-/* Alignement du titre principal */
 h1 {
     text-align: center;
     margin-bottom: 20px;
@@ -8,19 +5,17 @@ h1 {
     text-transform: uppercase;
 }
 
-/* Conteneur général pour les services */
-#service-section {
+.service-section {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    margin: 50px 0;  /* Augmentation de la marge pour plus d'espace */
+    margin: 50px 0;  
 }
 
-/* Style individuel pour chaque service */
 .service-item {
-    width: 80%;  /* Augmentation de la largeur pour plus d'espace */
-    margin: 40px;  /* Augmentation de la marge pour plus d'espace */
-    padding: 30px;  /* Augmentation du rembourrage pour plus d'espace */
+    width: 80%;  
+    margin: 40px;  
+    padding: 30px;  
     background-color: rgba(255, 239, 239, 0.457);
     border-radius: 10px;
     display: flex;
@@ -28,43 +23,36 @@ h1 {
     align-items: center;
     justify-content: space-between;
 }
-
-/* Inversion de l'ordre pour les services en position impaire */
+/*Inverser les service*/
 .service-item.reverse {
     flex-direction: row-reverse;
 }
 
-/* Style pour la description du service */
 .service-description {
     width: 45%;
 }
 
-/* Style pour le titre et la description du service */
 .service-item h2,
 .service-item p {
     margin-bottom: 20px;
 }
 
-/* Style pour le titre des services */
 .service-item h2 {
-    font-family: 'Loura';  /* Changement de la police à 'Loura' */
+    font-family: 'Loura';  
     text-align: center;
 }
 
-
-/* Conteneur de l'image */
 .service-image-container {
     width: 45%;
-    height: 300px;  /* Hauteur fixe */
-    overflow: hidden;  /* Cache les parties de l'image qui dépassent */
+    height: 300px;  
+    overflow: hidden;  
 }
 
-/* Image du service */
 .service-image {
     width: 100%;
     height: 100%;
-    object-fit: cover;  /* Ajuste l'image pour couvrir la zone de contenu */
-    object-position: center;  /* Centre l'image */
+    object-fit: cover; 
+    object-position: center;  
 }
 
 /* Style pour le bouton "Réservez maintenant" */
