devrait etre terminé

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -10,6 +10,7 @@
 }
 
 .service h3 {
+  font-family: 'Loura';
   margin: 10px 0;
 }
 
@@ -72,7 +73,6 @@ a {
   padding: 40px;
   border-radius: 5px; 
 }
-
 
 /* Témoignages */
 .testimonials {
