--- a/src/_includes/nav.njk
+++ b/src/_includes/nav.njk
@@ -7,6 +7,7 @@
     <a href="/">ACCUEIL</a>
     <a href="#">À PROPOS</a>
     <a href="/services">SERVICES</a>
+    <a href="#">RENDEZ-VOUS</a>
     <div class="chakra-bar">
         <button onclick="changeTheme('root')">
             <img src="../assets/images/root-chakra.png" alt="Chakra Racine">
