--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -17,7 +17,7 @@
 
     <main>
         {{ content | safe }}
-        <button id="sticky-button"><a href="#">Rendez-vous téléphonique</a></button>
+        <button class="sticky-button"><a href="#">Rendez-vous téléphonique</a></button>
 
     </main>
 
